--- a/SchoolManagement/templates/system/supervisor_schools.html
+++ b/SchoolManagement/templates/system/supervisor_schools.html
@@ -9,51 +9,9 @@
 </head>
 <body>
   <div class="dashboard">
-    <!-- Sidebar -->
-    <aside class="sidebar">
-      <div class="logo-container">
-        <img src="{% static 'images/logo white.png' %}" alt="Logo" class="logo">
-      </div>
-      <nav class="nav">
-        <ul>
-          <li>
-            <a href="/supervisor-dashboard">
-              <i class="icon-home"></i> HOME
-            </a>
-          </li>
-          <li class="active">
-            <a href="/supervisor-schools">
-              <i class="icon-schools"></i> SCHOOLS
-            </a>
-          </li>
-          <li>
-            <a href="/supervisor-admins">
-              <i class="icon-admins"></i> ADMINS
-            </a>
-          </li>
-          <li>
-            <a href="/supervisor-teachers">
-              <i class="icon-teachers"></i> TEACHERS
-            </a>
-          </li>
-          <li>
-            <a href="/supervisor-students">
-              <i class="icon-students"></i> STUDENTS
-            </a>
-          </li>
-          <li>
-            <a href="/supervisor-attendance">
-              <i class="icon-attendance"></i> ATTENDANCE
-            </a>
-          </li>
-          <li>
-            <a href="/supervisor-settings">
-              <i class="icon-settings"></i> SETTINGS
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </aside>
+    {% with active_page='schools' %}
+    {% include 'components/sidebar.html' %}
+    {% endwith %}
 
     <!-- Main Content -->
     <main class="content">
@@ -61,7 +19,7 @@
         <h1>ATTENDANCE MONITORING SYSTEM</h1>
         <div class="user-section">
           <img src="{% static 'images/user-default.png' %}" alt="Profile" class="profile-pic">
-          <button class="logout-btn" type="button" onclick="window.location.href='{% url '/' %}'">Logout</button>
+          <button class="logout-btn" type="button" onclick="window.location.href='{% url 'logout' %}'">Logout</button>
         </div>
       </header>
 
